--- a/1-weather-app/index.html
+++ b/1-weather-app/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Weather App</title>
 </head>
 <body>
-  
+  <div class="card">
+    <div class="search">
+      <input type="text" placeholder="enter city name" spellcheck="false">
+      <button><img src="images/search.png"></button>
+    </div>
+  </div>
 </body>
 </html>
