--- a/1-weather-app/index.html
+++ b/1-weather-app/index.html
@@ -7,11 +7,39 @@
   <title>Weather App</title>
 </head>
 <body>
+  <!-- card -->
   <div class="card">
+    <!-- search -->
     <div class="search">
       <input type="text" placeholder="enter city name" spellcheck="false">
       <button><img src="images/search.png"></button>
     </div>
+    <!-- weather -->
+    <div class="weather">
+      <img src="images/rain.png" class="weather-icon">
+      <h1 class="temp">22°C</h1>
+      <h2 class="city">New York</h2>
+    </div>
+    <!-- details -->
+    <div class="details">
+      <!-- humidty -->
+      <div class="col">
+        <img src="images/humidity.png">
+        <div>
+          <p class="humidity">50%</p>
+          <p>Humidity</p>
+        </div>
+      </div>
+      <!-- wind speed -->
+      <div class="col">
+        <img src="images/wind.png">
+        <div>
+          <p class="wind">18 km/h</p>
+          <p>Wind Speed</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
