--- a/1-weather-app/index.html
+++ b/1-weather-app/index.html
@@ -14,32 +14,37 @@
       <input type="text" placeholder="enter city name" spellcheck="false">
       <button><img src="images/search.png"></button>
     </div>
+    <!-- error -->
+    <div class="error">
+      <p>INVALID CITY NAME</p>
+    </div>
     <!-- weather -->
     <div class="weather">
       <img src="images/rain.png" class="weather-icon">
       <h1 class="temp">22°C</h1>
       <h2 class="city">New York</h2>
-    </div>
-    <!-- details -->
-    <div class="details">
-      <!-- humidty -->
-      <div class="col">
-        <img src="images/humidity.png">
-        <div>
-          <p class="humidity">50%</p>
-          <p>Humidity</p>
+      <!-- details -->
+      <div class="details">
+        <!-- humidty -->
+        <div class="col">
+          <img src="images/humidity.png">
+          <div>
+            <p class="humidity">50%</p>
+            <p>Humidity</p>
+          </div>
         </div>
-      </div>
-      <!-- wind speed -->
-      <div class="col">
-        <img src="images/wind.png">
-        <div>
-          <p class="wind">18 km/h</p>
-          <p>Wind Speed</p>
+        <!-- wind speed -->
+        <div class="col">
+          <img src="images/wind.png">
+          <div>
+            <p class="wind">18 km/h</p>
+            <p>Wind Speed</p>
+          </div>
         </div>
       </div>
     </div>
 
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
