--- a/2-to-do-list-app/index.html
+++ b/2-to-do-list-app/index.html
@@ -4,9 +4,26 @@
   <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>To-Do List App</title>
 </head>
 <body>
+  <!-- container -->
+  <div class="container">
+    <!-- todo-app -->
+    <div class="todo-app">
+      <h2>To-Do List<img src="./images/icon.png"></h2>
+      <!-- row -->
+      <div class="row">
+        <input type="text" id="input-box" placeholder="And your text">
+        <button>Add</button>
+      </div>
+      <ul id="list-container">
+        <!-- <li class="checked">Task 1</li>
+        <li>Task 2</li>
+        <li>Task 3</li> -->
+      </ul>
+    </div>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
