--- a/2-to-do-list-app/index.html
+++ b/2-to-do-list-app/index.html
@@ -15,7 +15,7 @@
       <!-- row -->
       <div class="row">
         <input type="text" id="input-box" placeholder="And your text">
-        <button>Add</button>
+        <button onclick="addTask()">Add</button>
       </div>
       <ul id="list-container">
         <!-- <li class="checked">Task 1</li>
