add: show question and answer

--- a/3-quiz-app/index.html
+++ b/3-quiz-app/index.html
@@ -10,14 +10,14 @@
   <div class="app">
     <h1>Simple Quiz</h1>
     <div class="quiz">
-      <h2 id="questions">
-        questions goes here
+      <h2 id="question">
+        Questions goes here
       </h2>
-      <div id="answer-buttons">
-        <button class="btn">Answer </button>
+      <div id="answer-btns">
+        <!-- <button class="btn">Answer </button>
         <button class="btn">B</button>
         <button class="btn">C</button>
-        <button class="btn">D</button>
+        <button class="btn">D</button> -->
       </div>
       <button id="next-btn">Next</button>
     </div>
